login php files completed

--- a/src/multtable.html
+++ b/src/multtable.html
@@ -1,8 +1,3 @@
-<?php //echo $_SERVER['HTTP_USER_AGENT']; 
-//USEFUL for DEBUGGING!!!!!!
-error_reporting(E_ALL);
-ini_set('display_errors', 1);
-?>
 <!DOCTYPE html>
 <html>
  <head>
@@ -18,3 +13,5 @@ ini_set('display_errors', 1);
     Max Multiplier: <input type="number" name="max-multiplier" /><br />
     <input type="submit" name="submit" value="Go!" />
 </form>
+</body>
+</html>
